--- a/medals/index.html
+++ b/medals/index.html
@@ -1,21 +1,37 @@
 <HTML>
-<HEAD>
-<TITLE>Medal</TITLE>
-</HEAD>
-<BODY style="margin: 0px;padding: 0px;">
-<div style="margin-left: auto;margin-right: auto;width:350px">
+  <HEAD>
+  <TITLE>Medal</TITLE>
   
-  <div id="observablehq-show-4fc7d4f7"></div>
-
+  <style>
   
-  <script type="module">
-  import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
-  import define from "https://api.observablehq.com/@loredanacirstea/the-laurel-medal-check.js?v=3";
-  new Runtime().module(define, name => {
-    if (name === "show") return new Inspector(document.querySelector("#observablehq-show-4fc7d4f7"));
-  });
-  </script>
-
-</div>
-</BODY>
-</HTML>
+  @media all and (display-mode: fullscreen) {
+    body {
+      margin: 0;
+      border: 5px solid black;
+    }
+  }
+  
+  </style>
+  </HEAD>
+  <BODY style="margin: 0px;padding: 0px;">
+  <div style="margin-left: auto;margin-right: auto;width:350px">
+    
+    <div id="observablehq-show-4fc7d4f7" style="
+    overflow: hidden;
+    width: 350px;
+    display: flex;
+    position: absolute;
+  "></div>
+  
+    
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
+    import define from "https://api.observablehq.com/@loredanacirstea/the-laurel-medal-check.js?v=3";
+    new Runtime().module(define, name => {
+      if (name === "show") return new Inspector(document.querySelector("#observablehq-show-4fc7d4f7"));
+    });
+    </script>
+  
+  </div>
+  </BODY>
+  </HTML>
