--- a/index.html
+++ b/index.html
@@ -3,11 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Provable.dev - Tools for a Provable New World</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Provable.dev - Cryptographic Proof Tools for Digital Evidence</title>
+    <meta name="title" content="Provable.dev - Cryptographic Proof Tools for Digital Evidence">
+    <meta name="description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. The right to evidence is a human right.">
+    <meta name="keywords" content="cryptographic proof, digital evidence, timestamp, provable form, blockchain proof, notarization, timestamped proof, digital proof, evidence verification, cryptographic verification">
+    <meta name="author" content="Kuip Limited">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://provable.dev/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://provable.dev/">
+    <meta property="og:title" content="Provable.dev - Cryptographic Proof Tools for Digital Evidence">
+    <meta property="og:description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. The right to evidence is a human right.">
+    <meta property="og:image" content="https://provable.dev/images/provable.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://provable.dev/">
+    <meta property="twitter:title" content="Provable.dev - Cryptographic Proof Tools for Digital Evidence">
+    <meta property="twitter:description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. The right to evidence is a human right.">
+    <meta property="twitter:image" content="https://provable.dev/images/provable.png">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Provable.dev",
+      "url": "https://provable.dev",
+      "logo": "https://provable.dev/images/provable.png",
+      "description": "Tools for creating cryptographic, timestamped proofs of digital actions",
+      "foundingDate": "2024",
+      "founder": {
+        "@type": "Organization",
+        "name": "Kuip Limited"
+      },
+      "offers": [
+        {
+          "@type": "SoftwareApplication",
+          "name": "Provable Form",
+          "applicationCategory": "BrowserApplication",
+          "operatingSystem": "Chrome",
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
     <main class="container">
