seo google crawl fixes

--- a/medals/index.html
+++ b/medals/index.html
@@ -1,7 +1,13 @@
-<HTML>
-  <HEAD>
-  <TITLE>Medal</TITLE>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Laurel Medal - Provable.dev</title>
+  <meta name="description" content="Interactive visualization of The Laurel Medal by Provable.dev - a symbol of cryptographic proof and verification.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://provable.dev/medals/">
+
   <style>
   
   @media all and (display-mode: fullscreen) {
@@ -12,8 +18,8 @@
   }
   
   </style>
-  </HEAD>
-  <BODY style="margin: 0px;padding: 0px;">
+</head>
+<body style="margin: 0px;padding: 0px;">
   <div style="margin-left: auto;margin-right: auto;width:350px">
     
     <div id="observablehq-show-4fc7d4f7" style="
@@ -33,5 +39,5 @@
     </script>
   
   </div>
-  </BODY>
-  </HTML>
+</body>
+</html>
