--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -5,12 +5,11 @@
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Privacy Policy for Provable.dev - Learn how we handle user data and protect your privacy while using our cryptographic proof tools.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://provable.dev/PrivacyPolicy.html">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <meta
-      name="description"
-      content="provable.dev"
-    />
-    <title>provable.dev</title>
+    <title>Privacy Policy - Provable.dev</title>
   </head>
   <body>
     <h1>Privacy Policy</h1>
