--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
                     <p class="subtitle">tools for a provable new world</p>
 
                     <div class="principles">
-                        <h2>Fundamental Principles</h2>
                         <p class="principle-statement">The right to evidence must be a human right.</p>
                         <p class="principle-statement">Proofs are non-political, non-biased, and immune to manipulation by wealth or power.</p>
                     </div>
@@ -89,17 +88,21 @@
         </section>
 
         <section id="current-tools" class="products-section">
-            <h2>Our Tools</h2>
+            <h2>Provable Tools</h2>
             <div class="product-list">
                 <div class="product-item">
                     <h3>Provable Form</h3>
-                    <p>Browser extension for Chrome that creates a cryptographic timestamped proof of submitting an online form. Your data remains private.</p>
+                    <p>Browser extension for Chrome that creates a cryptographic timestamped proof of submitting an online form. Your data remains private. We do not store it.</p>
                     <a href="https://chromewebstore.google.com/detail/provable-form/djppgolnnaeaoingadhdbianibehcpeb" target="_blank" class="link">Chrome Web Store →</a>
                 </div>
                 <div class="product-item">
                     <h3>Kayros Indexer</h3>
                     <p>Our timestamped indexer can record any digital action in a fully anonymized way, allowing you to have notarized private proofs of digital actions.</p>
                     <a href="https://kayros.kuip.co.uk/" target="_blank" class="link">Learn More →</a>
+                </div>
+                <div class="product-item">
+                    <h3>Provable Email</h3>
+                    <p>Email bot that notarizes your emails. Add kayros1@dmail.provable.dev as To, Cc or Bcc and you will receive a cryptographic proof. Your data remains private. We do not store it.</p>
                 </div>
                 <div class="product-item">
                     <h3>Provable Email Forwarding</h3>
@@ -144,6 +147,7 @@
 
     <footer>
         <p>&nbsp; &copy; 2025 <a href="https://www.kuip.co.uk">Kuip Limited</a></p>
+        <p><a href="https://x.com/is_provable" target="_blank">X</a></p>
     </footer>
 </body>
 </html>
