change of style

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
     <meta property="twitter:image" content="https://provable.dev/images/provable.png">
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -83,6 +80,14 @@
                         <p class="principle-statement">The right to evidence must be a human right.</p>
                         <p class="principle-statement">Proofs are non-political, non-biased, and immune to manipulation by wealth or power.</p>
                     </div>
+
+                    <div class="intro-box">
+                        <p><a href="https://x.com/is_provable" target="_blank" class="link">Follow us on X to get notified →</a></p>
+                        <p>Coming soon: your personal digital notary.</p>
+                        </br>
+                        <p>We are building tools for proving every digital action: sending a form online, notarizing a sent email, to video capture with cryptographic proof of content and time & more.</p>
+                        <p>In the meantime, check out our free, 100% privacy-preserving tools:</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -116,7 +121,6 @@
                 </div>
             </div>
         </section>
-
         <section id="future-tools" class="products-section">
             <h2>Coming Soon</h2>
             <div class="product-list">
