update style & products

--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
                     <a href="https://chromewebstore.google.com/detail/provable-form/djppgolnnaeaoingadhdbianibehcpeb" target="_blank" class="link">Chrome Web Store →</a>
                 </div>
                 <div class="product-item">
+                    <h3>Provable Email</h3>
+                    <p>Notarize your emails: add <a href="mailto:kayros1@dmail.provable.dev">kayros1@dmail.provable.dev</a> as To, Cc or Bcc and you will receive a cryptographic proof. Your data remains private. We do not store your email message.</p>
+                </div>
+                <div class="product-item">
                     <h3>Kayros Indexer</h3>
-                    <p>Our timestamped indexer can record any digital action in a fully anonymized way, allowing you to have notarized private proofs of digital actions.</p>
+                    <p>Our >65k TPS indexer can record and timestamp any digital action in a fully anonymized way, allowing you to have notarized private proofs of digital actions.</p>
                     <a href="https://kayros.kuip.co.uk/" target="_blank" class="link">Learn More →</a>
                 </div>
                 <div class="product-item">
-                    <h3>Provable Email</h3>
-                    <p>Email bot that notarizes your emails. Add kayros1@dmail.provable.dev as To, Cc or Bcc and you will receive a cryptographic proof. Your data remains private. We do not store it.</p>
-                </div>
-                <div class="product-item">
                     <h3>Provable Email Forwarding</h3>
-                    <p>A new email forwarding protocol that authenticates the original email and the email chain.</p>
+                    <p>A new email forwarding protocol that authenticates the original email and the email chain. Contact us for integrating it with your tools.</p>
                     <a href="https://wasmx.provable.dev/docs/architecture/provable_email_forwarding" target="_blank" class="link">View Documentation →</a>
                 </div>
                 <div class="product-item">
@@ -126,7 +126,8 @@
             <div class="product-list">
                 <div class="product-item upcoming">
                     <h3>Provable Wallet</h3>
-                    <p>Encrypted storage for your digital proofs.</p>
+                    <p>Your personal digital notary. Encrypted storage for your digital proofs. Notarized summaries of private proofs: show them in public without losing privacy!</p>
+                    <p>And much more.</p>
                 </div>
                 <div class="product-item upcoming">
                     <h3>Provable Web</h3>
@@ -135,7 +136,7 @@
                 <div class="product-item upcoming">
                     <h3>Timestamped Media</h3>
                     <p>Timestamp images and videos with our Kayros indexer. Demo: "Make Proofs not War"</p>
-                    <a href="https://youtu.be/6sLufsnUMK4?si=rSocRDdGovTUNl9S" target="_blank" class="link">Watch Demo →</a>
+                    <a href="https://youtu.be/6sLufsnUMK4?si=rSocRDdGovTUNl9S" target="_blank" class="link">Watch Older Demo →</a>
                 </div>
             </div>
         </section>
@@ -145,13 +146,13 @@
         </section>
 
          <section id="custom" class="notice-section">
-            <p>If you are fighting a proof war (journalist, activist, researcher, citizen, etc.), we want to know your specific needs. Let's work together and build the digital proof layer of society. Contact us: contact at mail.provable.dev</p>
+            <p>If you are fighting a proof war (journalist, activist, researcher, citizen, etc.), we want to know your specific needs. Let's work together and build the digital proof layer of society. Contact us: <a href="mailto:contact@mail.provable.dev">contact@mail.provable.dev</a></p>
         </section>
     </main>
 
     <footer>
         <p>&nbsp; &copy; 2025 <a href="https://www.kuip.co.uk">Kuip Limited</a></p>
-        <p><a href="https://x.com/is_provable" target="_blank">X</a></p>
+        <p><a href="https://x.com/is_provable" target="_blank">X | @is_provable</a></p>
     </footer>
 </body>
 </html>
