--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                         <p><a href="https://x.com/is_provable" target="_blank" class="link">Follow us on X to get notified →</a></p>
                         <p>Coming soon: your personal digital notary.</p>
                         </br>
-                        <p>We are building tools for proving every digital action: sending a form online, notarizing a sent email, to video capture with cryptographic proof of content and time & more.</p>
-                        <p>In the meantime, check out our free, 100% privacy-preserving tools:</p>
+                    </div>
+                    <div class="intro-box">
+                        <p>In the meantime, check out our free, 100% privacy-preserving tools for proving digital actions:</p>
                     </div>
                 </div>
             </div>
