--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="intro-box">
                         <p><a href="https://x.com/is_provable" target="_blank" class="link">Follow us on X to get notified →</a></p>
-                        <p>Coming soon: your personal digital notary.</p>
+                        <p>Coming soon: your personal digital notary for the AI era.</p>
                         </br>
                     </div>
                     <div class="intro-box">
@@ -127,7 +127,7 @@
             <div class="product-list">
                 <div class="product-item upcoming">
                     <h3>Provable Wallet</h3>
-                    <p>Your personal digital notary. Encrypted storage for your digital proofs. Notarized summaries of private proofs: show them in public without losing privacy!</p>
+                    <p>Your personal digital notary for the AI era. Encrypted storage for your digital proofs. Notarized summaries of private proofs: show them in public without losing privacy!</p>
                     <p>And much more.</p>
                 </div>
                 <div class="product-item upcoming">
