--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="intro-box">
                         <p><a href="https://x.com/is_provable" target="_blank" class="link">Follow us on X to get notified →</a></p>
-                        <p>Coming soon: your personal digital notary for the AI era.</p>
+                        <p>Coming soon: your personal digital notary for the AI era. Notarize anything. Verify forever.</p>
                         </br>
                     </div>
                     <div class="intro-box">
