--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://provable.dev/">
     <meta property="og:title" content="Provable.dev - Cryptographic Proof Tools for Digital Evidence">
-    <meta property="og:description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. The right to evidence is a human right.">
+    <meta property="og:description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. Provable notarization at global scale, for digital actions. The right to evidence is a human right.">
     <meta property="og:image" content="https://provable.dev/images/provable.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://provable.dev/">
     <meta property="twitter:title" content="Provable.dev - Cryptographic Proof Tools for Digital Evidence">
-    <meta property="twitter:description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. The right to evidence is a human right.">
+    <meta property="twitter:description" content="Create cryptographic, timestamped proofs of digital actions. Tools for form submissions, web pages, emails, and media. Provable notarization at global scale, for digital actions. The right to evidence is a human right.">
     <meta property="twitter:image" content="https://provable.dev/images/provable.png">
 
     <link rel="stylesheet" href="styles.css">
@@ -43,8 +43,8 @@
       "name": "Provable.dev",
       "url": "https://provable.dev",
       "logo": "https://provable.dev/images/provable.png",
-      "description": "Tools for creating cryptographic, timestamped proofs of digital actions",
-      "foundingDate": "2024",
+      "description": "Provable notarization at global scale, for digital actions. Tools for creating cryptographic, timestamped proofs of digital actions.",
+      "foundingDate": "2025",
       "founder": {
         "@type": "Organization",
         "name": "Kuip Limited"
@@ -71,23 +71,16 @@
             <div class="hero-grid">
                 <div class="hero-image">
                     <img src="images/provable.png" alt="Provable - Postulatio, Consentio, Veritas" class="gate">
+                    <p class="subtitle">tools for a provable new world</p>
                 </div>
                 <div class="hero-content">
-                    <h1>provable.dev</h1>
-                    <p class="subtitle">tools for a provable new world</p>
-
+                    <h1>provable</h1>
                     <div class="principles">
-                        <p class="principle-statement">The right to evidence must be a human right.</p>
-                        <p class="principle-statement">Proofs are non-political, non-biased, and immune to manipulation by wealth or power.</p>
-                    </div>
-
-                    <div class="intro-box">
-                        <p><a href="https://x.com/is_provable" target="_blank" class="link">Follow us on X to get notified →</a></p>
-                        <p>Coming soon: your personal digital notary for the AI era. Notarize anything. Verify forever.</p>
-                        </br>
+                        <p class="principle-statement">Provable notarization at global scale, for digital actions.</p>
                     </div>
                     <div class="intro-box">
-                        <p>In the meantime, check out our free, 100% privacy-preserving tools for proving digital actions:</p>
+                        <p>The right to evidence must be a human right.</p>
+                        <p>Proofs are non-political, non-biased, and immune to manipulation by wealth or power. Proofs will become more important than money.</p>
                     </div>
                 </div>
             </div>
@@ -107,7 +100,7 @@
                 </div>
                 <div class="product-item">
                     <h3>Kayros Indexer</h3>
-                    <p>Our >65k TPS indexer can record and timestamp any digital action in a fully anonymized way, allowing you to have notarized private proofs of digital actions.</p>
+                    <p>Our >65k TPS indexer can record and timestamp any digital action in a fully anonymized way, allowing you to have notarized private proofs of digital actions. Internal testing (ver.2): 1 mil TPS possible on one level. Kayros can be multi-level, reaching global scale.</p>
                     <a href="https://kayros.kuip.co.uk/" target="_blank" class="link">Learn More →</a>
                 </div>
                 <div class="product-item">
