--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <body>
     <main class="container">
         <section id="hero" class="hero-section">
+            <a href="/proof.html" target="_blank" class="link verify-button">Verify a proof</a>
             <div class="hero-grid">
                 <div class="hero-image">
                     <img src="images/provable.png" alt="Provable - Postulatio, Consentio, Veritas" class="gate">
@@ -76,7 +77,7 @@
                 <div class="hero-content">
                     <h1>provable</h1>
                     <div class="principles">
-                        <p class="principle-statement">Provable notarization at global scale, for digital actions.</p>
+                        <p class="principle-statement">cryptographic notarization at global scale, for digital actions.</p>
                     </div>
                     <div class="intro-box">
                         <p>The right to evidence must be a human right.</p>
