add provable web extension

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                     <a href="https://chromewebstore.google.com/detail/provable-form/djppgolnnaeaoingadhdbianibehcpeb" target="_blank" class="link">Chrome Web Store →</a>
                 </div>
                 <div class="product-item">
+                    <h3>Provable Web</h3>
+                    <p>Browser extension for Chrome that creates a cryptographic timestamped proof of a web page. From HTML, to HTTP requests, to browser extension scripts loaded in the page. Your data remains private.</p>
+                    <a href="https://chromewebstore.google.com/detail/provable-web/kgmbhnafpiiiapfpheibbahlmladldmi" target="_blank" class="link">Chrome Web Store →</a>
+                </div>
+                <div class="product-item">
                     <h3>Provable Email</h3>
                     <p>Notarize your emails: add <a href="mailto:kayros1@dmail.provable.dev">kayros1@dmail.provable.dev</a> as To, Cc or Bcc and you will receive a cryptographic proof. Your data remains private. We do not store your email message.</p>
                 </div>
