--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="hero-content">
                     <h1>provable</h1>
                     <div class="principles">
-                        <p class="principle-statement">cryptographic notarization at global scale, for digital actions.</p>
+                        <p class="principle-statement">cryptographic notarization at a global scale, for any digital actions.</p>
                     </div>
                     <div class="intro-box">
                         <p>The right to evidence must be a human right.</p>
@@ -105,6 +105,15 @@
                     <p>Notarize your emails: add <a href="mailto:kayros1@dmail.provable.dev">kayros1@dmail.provable.dev</a> as To, Cc or Bcc and you will receive a cryptographic proof. Your data remains private. We do not store your email message.</p>
                 </div>
                 <div class="product-item">
+                    <h3>Provable SDK</h3>
+                    <p>TypeScript, Python, Golang packages for adding cryptographic notarization to your critical APIs.</p>
+                    <a href="https://github.com/kuip/provable-sdk" target="_blank" class="link">SDK →</a>
+                </div>
+                <div class="product-item">
+                    <h3>Provable Files</h3>
+                    <p>A secure, fully notarized folder that captures any file change. Compatible with Google Drive. Contact us for early testing.</p>
+                </div>
+                <div class="product-item">
                     <h3>Kayros Indexer</h3>
                     <p>Our >65k TPS indexer can record and timestamp any digital action in a fully anonymized way, allowing you to have notarized private proofs of digital actions. Internal testing (ver.2): 1 mil TPS possible on one level. Kayros can be multi-level, reaching global scale.</p>
                     <a href="https://kayros.kuip.co.uk/" target="_blank" class="link">Learn More →</a>
@@ -128,10 +137,6 @@
                     <h3>Provable Wallet</h3>
                     <p>Your personal digital notary for the AI era. Encrypted storage for your digital proofs. Notarized summaries of private proofs: show them in public without losing privacy!</p>
                     <p>And much more.</p>
-                </div>
-                <div class="product-item upcoming">
-                    <h3>Provable Web</h3>
-                    <p>Create a cryptographic, timestamped proof of any web page, web page fragment, or social media post.</p>
                 </div>
                 <div class="product-item upcoming">
                     <h3>Timestamped Media</h3>
